<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/formula"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.1"
        android:gravity="right|bottom"
        android:maxLines="1"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:textSize="@dimen/formula_text_size"/>

    <HorizontalScrollView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:layout_gravity="right"

            android:textSize="@dimen/display_text_size"
            tools:text="0" />
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_percent"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonPercent"
            android:onClick="onClickButton" />

        <Button
            android:id="@+id/btn_power"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonPower"
            android:hint="@string/update"
            android:onClick="onClickButton"
            android:enabled="false"/>

        <Button
            android:id="@+id/btn_clear"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonClear"
            android:hint="@string/update"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_root"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonRoot"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_reset"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonReset"
            android:visibility="gone"
            android:onClick="onClickButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_7"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonSeven"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_8"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonEight"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_9"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonNine"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_divide"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDivide"
            android:onClick="onClickButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_4"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonFour"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_5"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonFive"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_6"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonSix"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_multiply"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonMutiply"
            android:onClick="onClickButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonOne"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_2"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonTwo"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_3"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonThree"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_minus"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonMinus"
            android:onClick="onClickButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_0"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonZero"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_decimal"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDecimal"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_equals"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonResult"
            android:onClick="onClickButton"/>

        <Button
            android:id="@+id/btn_plus"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonPlus"
            android:onClick="onClickButton"/>
    </LinearLayout>
</LinearLayout>